<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/item_5" />
        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/ic_more_black_24dp"
            android:title="@string/item_6" />
    </group>

    <item
        android:id="@+id/my_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/my_account" />

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>

</menu>
